--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "IN MEMORY CRUD REST SERVICE WITH VALIDATION",
   "main": "index.js",
   "scripts": {
+    "prepare": "npx sequelize-cli db:create",
     "task": "nodemon index.js --exec babel-node --presets babel-preset-env",
+    "task2": "nodemon index2.js --exec babel-node --presets babel-preset-env",
     "eslint": "npx eslint index.js && npx eslint routes/users.js"
   },
   "repository": {
@@ -33,6 +35,10 @@
     "express": "^4.18.1",
     "express-joi-validation": "^5.0.1",
     "joi": "^17.6.0",
+    "pg": "^8.7.3",
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.20.1",
+    "sequelize-cli": "^6.4.1",
     "uuid": "^8.3.2"
   }
 }
