--- a/package.json
+++ b/package.json
@@ -38,6 +38,6 @@
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.20.1",
     "sequelize-cli": "^6.4.1",
-    "uuid": "^8.3.2"
+    "winston": "^3.8.1"
   }
 }
