--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "body-parser": "^1.20.0",
     "eslint-scope": "^7.1.1",
     "express": "^4.18.1",
+    "express-async-errors": "^3.1.1",
     "express-joi-validation": "^5.0.1",
     "joi": "^17.6.0",
     "pg": "^8.7.3",
