--- a/package.json
+++ b/package.json
@@ -30,11 +30,13 @@
   },
   "dependencies": {
     "body-parser": "^1.20.0",
+    "cors": "^2.8.5",
     "eslint-scope": "^7.1.1",
     "express": "^4.18.1",
     "express-async-errors": "^3.1.1",
     "express-joi-validation": "^5.0.1",
     "joi": "^17.6.0",
+    "jsonwebtoken": "^8.5.1",
     "pg": "^8.7.3",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.20.1",
