--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "init-database": "npx sequelize-cli db:create",
     "task": "nodemon index.js --exec babel-node --presets babel-preset-env",
-    "eslint": "npx eslint index.js && npx eslint routes/users.js"
+    "eslint": "npx eslint index.js && npx eslint routes/users.js",
+    "test": "jest"
   },
   "repository": {
     "type": "module",
@@ -19,6 +20,7 @@
   },
   "homepage": "https://github.com/sel-julia/nodejs-module2#readme",
   "devDependencies": {
+    "@babel/preset-env": "^7.18.9",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
     "babel-eslint": "^8.2.6",
@@ -26,11 +28,14 @@
     "babel-preset-env": "^1.7.0",
     "eslint": "^4.19.1",
     "eslint-plugin-react": "^7.30.0",
-    "nodemon": "^2.0.16"
+    "jest": "^28.1.3",
+    "nodemon": "^2.0.16",
+    "supertest": "^6.2.4"
   },
   "dependencies": {
     "body-parser": "^1.20.0",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.1",
     "eslint-scope": "^7.1.1",
     "express": "^4.18.1",
     "express-async-errors": "^3.1.1",
@@ -42,5 +47,10 @@
     "sequelize": "^6.20.1",
     "sequelize-cli": "^6.4.1",
     "winston": "^3.8.1"
+  },
+  "jest": {
+    "transform": {
+      "^.+\\.[t|j]sx?$": "babel-jest"
+    }
   }
 }
